--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Form</title>
 
-    <link
-      href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.2/css/star-rating.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.2/js/star-rating.min.js"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -75,7 +65,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr >
                       <th scope="row">Purchase</th>
                       <td>
                         <div class="form-check">
