--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Form</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -30,22 +31,23 @@
             ><br />
             <input type="text" required />
           </div>
-          <div class="experience required">
-            <b>Your Experience</b>
-
-            <label for="input-1" class="control-label"></label>
-            <input
-              id="input-1"
-              name="input-1"
-              class="rating rating-loading"
-              class="required"
-              value="0"
-              data-min="0"
-              data-max="5"
-              data-step="0.5"
-              data-size="xs"
-              required
-            />
+          <div class="experience ">
+            <b>Your Experience</b><br>
+         <div class="container1">
+           <div class="star-widget">
+             <input type="radio" name="rate" id="rate-5">
+             <label for="rate-5" class="fas fa-star"></label>
+             <input type="radio" name="rate" id="rate-4">
+             <label for="rate-4" class="fas fa-star"></label>
+             <input type="radio" name="rate" id="rate-3">
+             <label for="rate-3" class="fas fa-star"></label>
+             <input type="radio" name="rate" id="rate-2">
+             <label for="rate-2" class="fas fa-star"></label>
+             <input type="radio" name="rate" id="rate-1">
+             <label for="rate-1" class="fas fa-star"></label>
+           </div>
+         </div>
+            
 </div>
             <div>
               <p>Overall, how would you rate your experience with us?</p>
@@ -520,8 +522,7 @@
                 ></textarea>
                 <label for="floatingTextarea2"></label>
               </div>
-
-              <input type="submit" />
+             <input type="submit" class="submit">
             </div>
           </div>
         </div>
